--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,5 @@
 - name: "CV"
-  link: "Gendron-Carrier_CV.pdf"
+  link: "https://www.dropbox.com/s/5s9h0psv4bb3qmf/Gendron-Carrier_CV.pdf?dl=0"
 
 - name: "Teaching"
   link: "/"
