--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Nicolas Gendron-Carrier
 author: Nicolas Gendron-Carrier
 
-url: "nigeca.github.io"
-baseurl: ""
+url: "http://nigeca.github.io"
+baseurl: "/ngc_carnival"
 
 description: "Nicolas Gendron-Carrier is a PhD candidate in Economics at the University of Toronto. His research interests are in labour economics and urban economics."
 
